crates/parser/tests/snapshots/test_expression__arithmetic_precedence.snap
---
source: crates/parser/tests/test_expression.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Function(
                    FunctionDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 10,
                                    end_line: 2,
                                    end_column: 11,
                                },
                            },
                        ),
                        name: "test",
                        parameters: [],
                        return_type: TypeReference {
                            path: Package {
                                name: "Integer",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 22,
                                    end_line: 2,
                                    end_column: 28,
                                },
                            },
                            type_arguments: [],
                            type_variable_values: [],
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 2,
                                start_column: 22,
                                end_line: 2,
                                end_column: 28,
                            },
                        },
                        return_multiplicity: PureOne,
                        body: [
                            Arithmetic(
                                ArithmeticExpr {
                                    left: Arithmetic(
                                        ArithmeticExpr {
                                            left: Literal(
                                                Integer(
                                                    IntegerLiteral {
                                                        value: 1,
                                                        source_info: SourceInfo {
                                                            source: "test.pure",
                                                            start_line: 4,
                                                            start_column: 6,
                                                            end_line: 4,
                                                            end_column: 6,
                                                        },
                                                    },
                                                ),
                                            ),
                                            op: Minus,
                                            right: Arithmetic(
                                                ArithmeticExpr {
                                                    left: Literal(
                                                        Integer(
                                                            IntegerLiteral {
                                                                value: 4,
                                                                source_info: SourceInfo {
                                                                    source: "test.pure",
                                                                    start_line: 4,
                                                                    start_column: 10,
                                                                    end_line: 4,
                                                                    end_column: 10,
                                                                },
                                                            },
                                                        ),
                                                    ),
                                                    op: Times,
                                                    right: Arithmetic(
                                                        ArithmeticExpr {
                                                            left: Literal(
                                                                Integer(
                                                                    IntegerLiteral {
                                                                        value: 2,
                                                                        source_info: SourceInfo {
                                                                            source: "test.pure",
                                                                            start_line: 4,
                                                                            start_column: 15,
                                                                            end_line: 4,
                                                                            end_column: 15,
                                                                        },
                                                                    },
                                                                ),
                                                            ),
                                                            op: Plus,
                                                            right: Literal(
                                                                Integer(
                                                                    IntegerLiteral {
                                                                        value: 3,
                                                                        source_info: SourceInfo {
                                                                            source: "test.pure",
                                                                            start_line: 4,
                                                                            start_column: 19,
                                                                            end_line: 4,
                                                                            end_column: 19,
                                                                        },
                                                                    },
                                                                ),
                                                            ),
                                                            source_info: SourceInfo {
                                                                source: "test.pure",
                                                                start_line: 4,
                                                                start_column: 17,
                                                                end_line: 4,
                                                                end_column: 17,
                                                            },
                                                        },
                                                    ),
                                                    source_info: SourceInfo {
                                                        source: "test.pure",
                                                        start_line: 4,
                                                        start_column: 12,
                                                        end_line: 4,
                                                        end_column: 12,
                                                    },
                                                },
                                            ),
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 4,
                                                start_column: 8,
                                                end_line: 4,
                                                end_column: 8,
                                            },
                                        },
                                    ),
                                    op: Times,
                                    right: Literal(
                                        Integer(
                                            IntegerLiteral {
                                                value: 4,
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 4,
                                                    start_column: 25,
                                                    end_line: 4,
                                                    end_column: 25,
                                                },
                                            },
                                        ),
                                    ),
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 4,
                                        start_column: 23,
                                        end_line: 4,
                                        end_column: 23,
                                    },
                                },
                            ),
                        ],
                        stereotypes: [],
                        tagged_values: [],
                        tests: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 2,
                            end_column: 8,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
